Offcanvas overflow fix

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -1,6 +1,10 @@
-.off-canvas-wrap,
-.inner-wrap
-  height: 100%
+//.off-canvas-wrap
+//  height: 100%
+//  overflow-y: scroll !important
+//  overflow-x: hidden !important
+//
+//.inner-wrap
+//  min-height: 100%
 
 .logo-link
   padding: 1rem
